# numpydtypes

./: .gitignore  .gitmodules  README.md  delete.txt  setup.cfg  setup_bfloat16.py  setup_posit8_2.py
examples/: test_posit8_2.py
src/: bfloat16.cc  posit8.cc
