[metadata]
name = numpydtypes
version = attr: numpydtypes.VERSION
author = Anurag Banerjee
description = Numpy custom dtype
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = numpy, dtype
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Operating System :: POSIX :: Linux

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    importlib-metadata; python_version<"3.8"
